# lilygo-quote-display

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  README.md  gerunds.txt  partitions.csv  quote.sh  sdkconfig.defaults
main/: CMakeLists.txt  battery.c  battery.h  config_page.h  display_ui.c  display_ui.h  gerunds.c  gerunds.h  idf_component.yml  main.c  sleep_manager.c  sleep_manager.h  webserver.c  webserver.h  wifi_manager.c  wifi_manager.h  wikiquote.c  wikiquote.h  wm_logo.h  wm_logo_256.h  wm_logo_64.h
